# project-athena

./: .dockerignore  .env.example  .env.example.setup  .env.mainnet  .env.production  .env.secure  .gitignore  AERODROME_INTEGRATION_STATUS.md  CLAUDE.md  COST_MANAGEMENT_SUMMARY.md  DEPLOYMENT.md  Dockerfile  PHASE1_DEPLOYMENT_GUIDE.md  README.md  ROADMAP.md  SECURITY_IMPLEMENTATION.md  TROUBLESHOOTING.md  check_daily_cost.py  check_wallet.py  deploy_cloud.sh  docker-compose.production.yml  docker-compose.yml  env.example  monitoring_dashboard.json  phase1_deployment_report.md  phase1_development_guide.md  pyproject.toml  pytest.ini  quick_balance.py  requirements.phase1.txt  requirements.txt  setup_budget_alerts.sh  setup_gcp.sh  test_aerodrome_cdp.py  test_aerodrome_data.py  test_agent_with_tracing.py  test_cdp.py  test_cdp_real.py  test_complete_cost_management.py  test_cost_limit_enforcement.py  (+19 more)
athena-ai/: .env  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DATABASE_ARCHITECTURE.md  Dockerfile  QUICK_START.md  README.md  cloudbuild.yaml  docker-compose.yml  main.py  requirements.txt  run.py  start_local.sh
backend/: agent.py  main.py  mcp_agent.py  mcp_example.py  mcp_tools.py  models.py
deployment/: .env.example  cloudbuild.yaml  deploy_production.sh  deployment_checklist.md  deployment_guide.md
docs/: DATABASE_ARCHITECTURE_AND_FLOW.md  ENHANCED_ARCHITECTURE.md  Project_Athena.txt  SERVICES_STOPPED.md  cdp_setup_guide.md  junior_dev_guide.md  mcp_integration.md  memory_data_architecture.md
reports/: mvp_1_1_completion_report.md  (+5 more)
scripts/: configure.py  (+24 more)
(+194 files in other folders)
